crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_expr_cast.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Array",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 16,
                  "end": 18
                }
              }
            ]
          },
          "span": {
            "start": 6,
            "end": 18
          }
        }
      },
      "span": {
        "start": 6,
        "end": 20
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Bool",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 30,
                  "end": 32
                }
              }
            ]
          },
          "span": {
            "start": 20,
            "end": 32
          }
        }
      },
      "span": {
        "start": 20,
        "end": 34
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Bool",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 44,
                  "end": 46
                }
              }
            ]
          },
          "span": {
            "start": 34,
            "end": 46
          }
        }
      },
      "span": {
        "start": 34,
        "end": 48
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Float",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 58,
                  "end": 60
                }
              }
            ]
          },
          "span": {
            "start": 48,
            "end": 60
          }
        }
      },
      "span": {
        "start": 48,
        "end": 62
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Float",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 72,
                  "end": 74
                }
              }
            ]
          },
          "span": {
            "start": 62,
            "end": 74
          }
        }
      },
      "span": {
        "start": 62,
        "end": 76
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Float",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 86,
                  "end": 88
                }
              }
            ]
          },
          "span": {
            "start": 76,
            "end": 88
          }
        }
      },
      "span": {
        "start": 76,
        "end": 90
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Int",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 100,
                  "end": 102
                }
              }
            ]
          },
          "span": {
            "start": 90,
            "end": 102
          }
        }
      },
      "span": {
        "start": 90,
        "end": 104
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Int",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 114,
                  "end": 116
                }
              }
            ]
          },
          "span": {
            "start": 104,
            "end": 116
          }
        }
      },
      "span": {
        "start": 104,
        "end": 118
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Object",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 128,
                  "end": 130
                }
              }
            ]
          },
          "span": {
            "start": 118,
            "end": 130
          }
        }
      },
      "span": {
        "start": 118,
        "end": 132
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "String",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 142,
                  "end": 144
                }
              }
            ]
          },
          "span": {
            "start": 132,
            "end": 144
          }
        }
      },
      "span": {
        "start": 132,
        "end": 146
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Unset",
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 156,
                  "end": 158
                }
              }
            ]
          },
          "span": {
            "start": 146,
            "end": 158
          }
        }
      },
      "span": {
        "start": 146,
        "end": 159
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 159
  }
}
