crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_expr_clone.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Clone": {
              "kind": {
                "Variable": "a"
              },
              "span": {
                "start": 13,
                "end": 15
              }
            }
          },
          "span": {
            "start": 7,
            "end": 15
          }
        }
      },
      "span": {
        "start": 7,
        "end": 16
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 16
  }
}
